Implemented geometric mean of kernel performance (presented at end of execution/program)
* Perf. measurement is based on profiling OpenCL's queues (flushes queue for every measurement).
* Generally show "performance" rather than execution time (for more meaningful values).
* Higher log-level/s: print performance for every kernel execution.
* Updated documentation accordingly.

Other changes:

* Cleanup: Removed some compile-time settings (due to corresponding runtime setting or due to default state).
* Benchmarks: fixed calculation which was incorrectly introduced by copy/pasting from transpose benchmark.
* OCLBE: implemented profiling queue events (ACC_OPENCL_VERBOSE=3 and higher). Code cleanup.
* Kernels: avoid dynamically indexing private arrays (registers).
* Libsmm: release kernels (libsmm_acc_finalize).
* Makefile: Search HOME directory (libxsmm).

--- a/src/acc/opencl/Makefile
+++ b/src/acc/opencl/Makefile
@@ -10,6 +10,7 @@ KERNEL := $(wildcard smm/kernels/*.cl)
 INCALL := $(INCACC) $(INCSMM)
 
 LIBXSMMROOT ?= $(wildcard ../../../../libxsmm)
+LIBXSMMROOT ?= $(wildcard $(HOME)/libxsmm)
 UNAME := $(shell uname)
 INTEL ?= 0
 DEV ?= 0
