Use tuned parameters if device matches original target
* Additional/alternative tunable names (OPENCL_LIBSMM_SMM_~): BS, BM, BN.
* Introduced DEV=2 to perform static code-analysis (Makefile).
* Only load device-specific/matching tuned parameters.
* Kernel code cleanup (renamed variables, etc).

acc_opencl.sh
* Handle empty DEVICE column, Windows newline (CSV), and prefer OPENCL_LIBSMM_PARAMS_DEVICE=NULL if unknown.
* Only attempt to delete the OFILE if it is a header-file (not a pseudo file like /dev/stdout).
* Include device name used to tune parameters (OPENCL_LIBSMM_PARAMS_DEVICE).
* Account for macOS' wordcount command (which adds leading spaces).
* Check/limit to single/consistent device (parameter collection).
* Disallow space character as separator (CSV file).
* Handle an optional DEVICE column in CSV-file.

tune_multiply.py
* Adjusted default such that --no-dups is active.
* Include device name in JSON files and CSV file.
* Handle an optional DEVICE column in CSV-file.
* Use label for unique database session.
* Leave device name empty if unknown.

--- a/src/acc/opencl/Makefile
+++ b/src/acc/opencl/Makefile
@@ -23,13 +23,6 @@ CFLAGS := -fPIC \
   -D__OPENCL \
   $(NULL)
 
-ifneq (0,$(DEV))
-  CFLAGS := -std=c89 $(CFLAGS)
-  CFLAGS += -Wno-unused-parameter
-else
-  CFLAGS := -std=c99 $(CFLAGS)
-endif
-
 ifeq (1,$(INTEL))
   CXX := icpc
   CC := icc
@@ -46,6 +39,21 @@ else
   else
     AR := ar
   endif
+endif
+
+ifneq (0,$(DEV))
+  ifeq (1,$(DEV))
+    CFLAGS := -std=c89 $(CFLAGS)
+    CFLAGS += -Wno-unused-parameter
+  else ifeq (clang,$(CC))
+    #LDFLAGS := --analyze $(LDFLAGS)
+    CFLAGS := --analyze $(CFLAGS)
+    CC := clang++
+  else
+    CC := $(CXX)
+  endif
+else
+  CFLAGS := -std=c99 $(CFLAGS)
 endif
 
 ifneq (0,$(DBG))
