--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ exclude: '^tools/(build_utils/fypp)'
 fail_fast: false
 repos:
 - repo: https://github.com/ambv/black
-  rev: stable
+  rev: 21.5b1
   hooks:
   - id: black
 - repo: https://gitlab.com/pycqa/flake8
