--- a/.github/workflows/doc-generation.yml
+++ b/.github/workflows/doc-generation.yml
@@ -11,7 +11,7 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     container:
-      image: dbcsr/build-env-ubuntu-20.04:latest
+      image: ghcr.io/cp2k/dbcsr-build-env-ubuntu-20.04:develop
 
     steps:
     - uses: actions/checkout@v2
