--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ jobs:
   build-and-upload:
     runs-on: ubuntu-latest
     container:
-      image: dbcsr/build-env-ubuntu-20.04:latest
+      image: ghcr.io/cp2k/dbcsr-build-env-ubuntu-20.04:develop
 
     steps:
     - uses: actions/checkout@v2
