--- a/.github/workflows/testing-gcc.yml
+++ b/.github/workflows/testing-gcc.yml
@@ -10,7 +10,7 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
     container:
-      image: dbcsr/build-env-latest-gcc:latest
+      image: ghcr.io/cp2k/dbcsr-build-env-latest-gcc:develop
 
     steps:
     - uses: actions/checkout@v2
