--- a/.github/workflows/testing-linux.yml
+++ b/.github/workflows/testing-linux.yml
@@ -13,7 +13,7 @@ jobs:
   pre-commit:
     runs-on: ubuntu-latest
     container:
-      image: dbcsr/build-env-ubuntu-20.04:latest
+      image: ghcr.io/cp2k/dbcsr-build-env-ubuntu-20.04:develop
     steps:
     - uses: actions/checkout@v2
     - name: Run pre-commit
@@ -26,7 +26,7 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
     container:
-      image: dbcsr/build-env-ubuntu-20.04:latest
+      image: ghcr.io/cp2k/dbcsr-build-env-ubuntu-20.04:develop
 
     strategy:
       matrix:
@@ -84,7 +84,7 @@ jobs:
   build-on-rocm:
     runs-on: ubuntu-latest
     container:
-      image: shoshijak/build-env-rocm:1.0
+      image: ghcr.io/cp2k/dbcsr-build-env-rocm:develop
 
     strategy:
       matrix:
