ACC benchmark drivers (SMM and Transpose)
* Improved validation output and reintroduced error margin (ACC_BENCH_SMM_EPSILON).
* Validation still does not control result code unless CHECK is given
* (CHECK=1 is a real number "1.0" scaling the ACC_BENCH_SMM_EPSILON).
* Wrap libxsmm_itrans_batch depending on whether OpenMP is present or not.
* OpenMP-parallel data initialization and code cleanup (INIT_MAT).
* Made OpenMP runtime optional (and libxsmmext library).

Use consistent stack-initialization for CUDA/HIP and OpenCL benchmarks

* Made init_stack and INIT_MAT available (acc_bench.h).
* Removed unused arguments of stackInit function.

Other

* Target doc_copy_examples does not exist if WITH_EXAMPLES=OFF.
* Marked libsmm_acc_process as extern "C" (CUDA/HIP backend).
* Code cleanup (comments, empty lines/comments, etc).

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -15,7 +15,7 @@ add_custom_target(
   COMMAND "${FORD_EXE}" "${FORD_PROJECT_FILE}"
   VERBATIM)
 add_dependencies(doc doc_copy_tests)
-if (WITH_C_API)
+if (WITH_C_API AND WITH_EXAMPLES)
   add_dependencies(doc doc_copy_examples)
 endif ()
 add_dependencies(doc fypp) # only depend on the fypp step to avoid building
