ocl-misc: improved Makefile and tune_multiply.py
* Avoid normalizing the relative error but consider it in a normalized fashion (acc_bench_smm).
* Revised short command line arguments. Introduced argument to customize size of SMM-batch.
* Fixed taking custom number of repetitions into account.
* Introduced ELEM_TYPE build key (make ELEM_TYPE=float).
* Slightly revised documentation.

--- a/src/acc/opencl/Makefile
+++ b/src/acc/opencl/Makefile
@@ -24,6 +24,10 @@ CFLAGS := -fPIC \
   -D__OPENCL \
   $(NULL)
 
+ifneq (,$(ELEM_TYPE))
+  CFLAGS += -DELEM_TYPE=$(ELEM_TYPE)
+endif
+
 ifeq (1,$(INTEL))
   CXX := icpc
   CC := icc
