ocl: adjust kernel and default parameters
* Adjusted enumeration-order: CPUs now appear before "Accelerator"
* Note: CL_DEVICE_TYPE_ACCELERATOR exists in addition to CL_DEVICE_TYPE_GPU.
* Fixed controlling loop-unroll (OPENCL_LIBSMM_SMM_LU).
* Makefile: support GPUVER (in addition to WITH_GPU).
* Introduced extensions to be enabled in source-code.
* Introduced NDBGDEV complementing NDEBUG.
* Forcibly avoid unrolling minibatch-loop.
* Force-unrolling FMA/inner loops.
* Improved pruning kernel-source.
* Support extended atomics.

--- a/src/acc/cuda/Makefile
+++ b/src/acc/cuda/Makefile
@@ -24,7 +24,7 @@ ifeq (,$(LIBXSMMROOT))
   LIBXSMMROOT := $(wildcard $(HOME)/libxsmm)
 endif
 UNAME := $(shell uname)
-WITH_GPU ?= P100
+WITH_GPU := $(if $(WITH_GPU),$(WITH_GPU),$(if $(GPUVER),$(GPUVER),P100))
 INTEL ?= 0
 DEV ?= 0
 
@@ -109,7 +109,7 @@ endif
 
 ifneq (0,$(DBG))
   ifeq (,$(DBG))
-    CFLAGS += -O2
+    CFLAGS += -O2 -DNDEBUG
   else
     ifneq (1,$(DBG))
       CFLAGS += -D_DEBUG
@@ -117,7 +117,7 @@ ifneq (0,$(DBG))
     CFLAGS += -O0
   endif
 else
-  CFLAGS += -O2 -DNDEBUG
+  CFLAGS += -O2 -DNDEBUG -DNDBGDEV
   SYM := 0
 endif
 ifneq (0,$(SYM))
