--- a/src/acc/cuda/Makefile
+++ b/src/acc/cuda/Makefile
@@ -170,7 +170,7 @@ CXXFLAGS += -std=c++11 $(CFLAGS)
 bench: $(MAKDIR)/../acc_bench_smm $(MAKDIR)/../acc_bench_trans
 
 .PHONY: all
-all: $(MAKDIR)/../dbcsr_acc.a $(MAKDIR)/../dbcsr_acc_smm.a bench
+all: bench $(MAKDIR)/../dbcsr_acc_test
 
 .PHONY: test
 test: test-interface test-trans test-smm
