ocl: fixes and code cleanup
* Introduced (optionally) querying device-type (c_dbcsr_acc_opencl_device_level).
* Recalculate block size to ensure minimum requested WG-size (WS).
* Fixed variable name in certain code-path (transpose kernel).
* Adjusted help messages and tuning level (tune_multiply.py).
* Kernel: fixed taking TB and TC into account.
* Kernel: code cleanup.
* Makefile dependency.

--- a/src/acc/cuda/Makefile
+++ b/src/acc/cuda/Makefile
@@ -10,10 +10,11 @@ OBJACC := $(SRCACC:.cpp=.o)
 
 GPUSMM := $(wildcard $(MAKDIR)/../libsmm_acc/kernels/*.h*)
 INCSMM := $(wildcard $(MAKDIR)/../libsmm_acc/*.h*) \
-  $(MAKDIR)/../libsmm_acc/smm_acc_kernels.h \
-  $(MAKDIR)/../libsmm_acc/parameters.h \
-  $(MAKDIR)/../acc_libsmm.h \
-  $(NULL)
+                     $(MAKDIR)/../libsmm_acc/smm_acc_kernels.h \
+                     $(MAKDIR)/../libsmm_acc/parameters.h \
+                     $(MAKDIR)/../acc_libsmm.h \
+                     $(MAKDIR)/../acc_bench.h \
+                     $(NULL)
 SRCSMM := $(wildcard $(MAKDIR)/../libsmm_acc/*.cpp)
 OBJSMM := $(SRCSMM:.cpp=.o)
 
