ocl: fixed kernel code-path and code cleanup
* Moved prototypes/declarations of timeset/timestop to ACC-interface.
* Added missing barrier in certain kernel code-path (subgroups).
* Reworked device_synchronize to be based on stream_sync.
* Introduced ACC_OPENCL_PROFILE (using timeset/timestop).
* Renamed OPENCL_LIBSMM_SMM_ID to OPENCL_LIBSMM_SMM_DEVID,
  and limited scope to loading default parameters.
* Fixed reading CSVs with device name containing WS.
* Excluded white spaces from ACC_OPENCL_DELIMS.
* Fixed calling putenv (compiler error/warning).
* Improved testing code-paths (__DBCSR_ACC).
* Adjusted auto-tuning level (wrapper script).
* Implemented ACC_OPENCL_SHARE (stride).
* Count unique streams (statistics).
* Improved handling errors.
* Adjusted tuning levels.
* Adjusted defaults.

--- a/src/acc/opencl/Makefile
+++ b/src/acc/opencl/Makefile
@@ -85,6 +85,8 @@ ifneq (0,$(DEV))
     CFLAGS += -std=c89
     CFLAGS += -Wno-unused-parameter
   else
+    # DEV=2 (and higher): linking is not intended
+    CFLAGS += -D__DBCSR_ACC
     CFLAGS += -Wno-deprecated -Werror
     ifneq (,$(findstring clang,$(CC) $(CXX)))
       override CC := clang++ --analyze
