--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,11 +5,13 @@ exclude: '^tools/(build_utils/fypp)'
 fail_fast: false
 repos:
 - repo: https://github.com/ambv/black
-  rev: 21.5b1
+  rev: 22.1.0
   hooks:
   - id: black
+    name: Reformat Python files with the black code formatter
+    files: '^.*(/PACKAGE)|(\.py)$'
 - repo: https://gitlab.com/pycqa/flake8
-  rev: 3.8.4
+  rev: 4.0.1
   hooks:
   - id: flake8
     exclude: >-
@@ -17,10 +19,12 @@ repos:
         .cp2k/.*|
       )$
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v3.4.0
+  rev: v4.1.0
   hooks:
   - id: check-ast
   - id: check-yaml
+  - id: check-symlinks
+  - id: trailing-whitespace
 - repo: https://github.com/pseewald/fprettify
   rev: v0.3.7
   hooks:
