--- a/.github/workflows/testing-linux.yml
+++ b/.github/workflows/testing-linux.yml
@@ -88,7 +88,7 @@ jobs:
 
     strategy:
       matrix:
-        use_openmp: [OPENMP=ON, OPENMP=OFF]
+        use_openmp: [OPENMP=ON]
 
     steps:
     - uses: actions/checkout@v2
@@ -120,7 +120,7 @@ jobs:
 
     strategy:
       matrix:
-        use_openmp: [OPENMP=ON, OPENMP=OFF]
+        use_openmp: [OPENMP=ON]
 
     steps:
     - uses: actions/checkout@v2
